--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -29,7 +29,7 @@
       <% if sr.status == "Accepted"%>
         <% sr.quotes.each do |q| %>
           <% if q.status == "Accepted" %>
-            You have accepted <%= User.find(q.user_id).company_name %>'s quote for <%= number_to_currency(q.amount) %>
+            <%= User.find(q.user_id).company_name %>'s quote for <%= number_to_currency(q.amount) %> has been accepted for this service request.
           <% end %>
         <% end %>
       <% else %>
