--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,30 +1,30 @@
 <% provide(:title, 'Sign up') %>
-<h1 class="profile-title"><%= "#{@user.first_name}" %>'s Profile  </h1>
+<h1 class="profile-title"><%= "#{@user.first_name}" %>'s Account Settings </h1>
 
 <div class="row">
   <!-- main div  container for form-->
-  <div class="col s8 offset-s2 z-depth-1 user-form">
+  <div class="col m8 s12 offset-m2 z-depth-1 user-form">
     <div class="col s12">
       <h3 class="center-align ">Personal Info</h3>
       <%= form_for(@user) do |f| %>
         <%= render 'shared/error_messages' %>
-        <div class="input-field col s6 ">
+        <div class="input-field col m6 s12">
           <%= f.label "First Name" %>
           <%= f.text_field :first_name %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Last Name" %>
           <%= f.text_field :last_name %>
         </div>
 
         <% if @user.is_provider %>
-          <div class="input-field col s6">
+          <div class="input-field col m6 s12">
             <%= f.label "Company Name" %>
             <%= f.text_field :company_name %>
           </div>
 
-          <div class="input-field col s6">
+          <div class="input-field col m6 s12">
             <%= f.label "Company Description" %>
             <%= f.text_field :company_desc %>
           </div>
@@ -33,33 +33,33 @@
 <!-- Address and contact -->
     <div class="col s12">
       <h3 class="center-align ">Address &amp Contact</h3>
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Email" %>
           <%= f.email_field :email %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Phone" %>
           <%= f.text_field :phone %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Address" %>
           <%= f.text_field :street_one %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Address cont." %>
           <%= f.text_field :street_two %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "State" %>
           <%= f.text_field :state %>
         </div>
 
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Zip" %>
           <%= f.text_field :zip %>
         </div>
@@ -69,12 +69,12 @@
     <div class="col s12">
         <h3 class="center-align ">Security</h3>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label "Password" %>
           <%= f.password_field :password %>
         </div>
 
-        <div class="input-field col s6">
+        <div class="input-field col m6 s12">
           <%= f.label :password_confirmation, "Confirmation" %>
           <%= f.password_field :password_confirmation%>
         </div>
@@ -83,4 +83,4 @@
 </div>
     <% end %>
 
-<%= link_to "#{@user.first_name}'s Requests", user_service_requests_path(@user) %>
+<!-- <%= link_to "#{@user.first_name}'s Requests", user_service_requests_path(@user) %> -->
