--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :additional_notes %>
   </div>
 
+  <div class="input-field">
+    <%= f.label :image %><br>
+    <%= f.file_field :image, multiple: true %>
+  </div>
+
   <div class="row">
     <div class="actions" style="margin-top: 40px;">
       <%= f.submit "Create Service Request" , class: "btn btn-primary" %>
