--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -32,7 +32,8 @@
                                                 service_request: {status: "Accepted"} ),
                                                 data: { confirm: "Are you sure you want to accept #{q.user.company_name}'s quote for #{number_to_currency(q.amount)}."} %>
       <% end %>
-      <%= link_to "Delete", service_request_quote_path(q), method: :delete if current_user.id == q.user_id %>
+      <%= link_to "Delete", service_request_quote_path(q, service_request: {status: "Open"}),
+          method: :delete if current_user.id == q.user_id %>
     </div>
     <hr>
   <% end %>
